# myproject

./: .gitignore  .gitmodules
audio/: awe-level8.flac  awe.flac  awe.m4a
models/: cube2.mtl  cylinder.blend  cylinder.blend1  cylinder.mtl
shaders/: debug.frag  debug.vert  dot.frag  dot.fs  dot.vert  dot.vs  shader.fs  shader.vs  tri.frag  tri.fs  tri.vs
src/: CMakeLists.txt  Makefile  RenderableModel.h  Timer.cpp  Timer.h  game.cpp  game.h  main.cpp  model.h  process_model.cpp  process_model.h  shaders.cpp  shaders.h
src/audio/: audio.cpp  audio.h  audio_file.h  read_ogg.cpp  read_ogg.h  read_wav.cpp  read_wav.h
src/control/: Controller.cpp  Controller.h
src/graphics/: Graphics.cpp  Graphics.h  RenderableModel.h  convert_model.cpp  convert_model.h  gl_types.h  model.h  process_model.cpp  read_obj.cpp  read_obj.h  read_png.cpp  read_png.h  shader_utils.cpp  shader_utils.h  shaders.cpp  shaders.h
src/model/: Color.h  Model.h  ModelKind.h  parse_model.cpp  parse_model.h
src/physics/: Physics.cpp  Physics.h
src/util/: DynArray.h  FixedArray.h  FixedSizeQueue.h  Matrix.h  MutableSlice.h  Quaternion.h  Ref.h  Slice.h  Transform.h  UniquePtr.h  assert.h  audio.cpp  audio.h  audio_file.h  float.h  int.h  io.cpp  io.h  math.h  read_obj.cpp  read_obj.h  read_ogg.cpp  read_png.cpp  read_png.h  string.h
